# tortugas-strava-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2026-01-15_create_users_table.py  2026-01-16_create_activities_table.py  2026-01-17_add_timezone_to_activity_timestamps.py  2026-01-17_add_timezone_to_user_timestamps.py  2026-01-17_add_workout_type_to_activities.py  2026-01-17_make_start_date_columns_timezone_aware.py  2026-01-18_add_profile_pictures_to_users.py
deploy/: DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  env.example  nginx-http-only.conf  nginx.conf  setup-ssl.sh
features/scoring/: CLUB_LEADERBOARD_GUIDE.md  IMPLEMENTATION_PLAN.md  SCORING_SYSTEM.md
scripts/: athlete_135390765.json  migrate_profile_pictures.py  test_oauth.py
src/: config.py  dependencies.py  main.py
src/activities/: __init__.py  models.py  router.py  service.py
src/auth/: models.py  router.py  schemas.py  service.py
src/core/: cache.py  database.py  lifespan.py  logging_config.py  middleware.py  request_context.py
src/scoring/: __init__.py  calculator.py  router.py  schemas.py  service.py
src/strava/: README.md  __init__.py  client.py  exceptions.py  rate_limiter.py  schemas.py  service.py
src/sync/: __init__.py  router.py  service.py
src/templates/: athlete_detail.html  error.html  landing.html  leaderboard.html  success.html
src/webhooks/: __init__.py  router.py
